<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#f8f4f8"
    android:layout_gravity="center_horizontal"
    android:layout_marginEnd="0dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:contentDescription="@string/image"
        android:src="@drawable/hugo_waiting"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/focus"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maintain_focus"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>

</LinearLayout>